# RLPR_box

./: .gitignore  README.md  README_zh.md  clean.sh  pyproject.toml
chzhang/: Qwen3_4B_.sh  Qwen3_4B_Base.sh  Qwen3_4B_Base_new.sh
chzhang/scripts0/: Qwen3_4B_Base_minibsz128.sh  Qwen3_4B_Base_minibsz256.sh
chzhang/scripts1/: run1.sh  run2.sh  run3.sh  run4.sh
data_process/: convert.ipynb  convert.py  convert1.py  convert_GRM.py  convert_GRM_math.py
examples/RLPR/: reproduce_qwen.sh
lzzhang/: Qwen3-4B-Base-1-v3.sh  Qwen3-4B-Base-1.sh  Qwen3-4B-Base.sh
scripts/: merge.sh  model_merger.py
verl/trainer/: main_ppo.py
verl/trainer/config/: ppo_trainer.yaml
verl/trainer/ppo/: ray_trainer.py  ray_trainer_1218.py
verl/utils/reward_score/: __init__.py  math.py  math_verify.py
verl/workers/: fsdp_workers.py
verl/workers/actor/: dp_actor.py
verl/workers/reward_manager/: __init__.py  hidden.py  naive.py
verl/workers/rollout/vllm_rollout/: vllm_rollout.py  vllm_rollout_spmd.py
